Update substitute.toml add polo 5th gen

--- a/selfdrive/car/torque_data/substitute.toml
+++ b/selfdrive/car/torque_data/substitute.toml
@@ -70,6 +70,7 @@ legend = ["LAT_ACCEL_FACTOR", "MAX_LAT_ACCEL_MEASURED", "FRICTION"]
 "AUDI Q2 1ST GEN" = "VOLKSWAGEN TIGUAN 2ND GEN"
 "VOLKSWAGEN TAOS 1ST GEN" = "VOLKSWAGEN TIGUAN 2ND GEN"
 "VOLKSWAGEN POLO 6TH GEN" = "VOLKSWAGEN GOLF 7TH GEN"
+"VOLKSWAGEN POLO 6TH GEN" = "VOLKSWAGEN POLO 5TH GEN"
 "SEAT LEON 3RD GEN" = "VOLKSWAGEN GOLF 7TH GEN"
 "SEAT ATECA 1ST GEN" = "VOLKSWAGEN GOLF 7TH GEN"
 
